src/EES/Dashboard/DashBoard.css
@import url('https://fonts.googleapis.com/css2?family=Iceland&display=swap');
.dashboard-main {
  background-color: #001432;
  width: 100vw;
  overflow: hidden;
  min-height: 100vh;
}
.db-main-container {
  margin-top: 3em;
  display: flex;
  flex-direction: row;
  width: 90vw;
  /* margin: 0 auto; */
  margin: 3vh auto 0 auto;
  padding-left: 6vw;
}
.db-user-details {
  background-color: rgba(217, 217, 217, 0.3);
  color: #fff;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  max-height: 65%;
  width: 47%;
  box-shadow: 0px 0px 25px 20px rgba(0, 0, 0, 0.25);
  margin: 6% 3%;
  padding: 2%;
  border-radius: 5%;
}
.qr-and-name {
  height: auto;
  display: flex;
  flex-direction: row;
}
.qr-and-name .qr {
  width: 38%;
  padding: 2%;
  font-size: 1.3rem;
}
.qr-and-name .userName {
  width: 58%;
  padding: 2%;
  text-align: center;
  font-size: 1rem;
}
.userDetails {
  margin-top: 1.2rem;
  height: 50%;
}
.padding-between {
  padding: 2%;
}
.textSmall {
  font-size: 0.8rem;
  font-weight: 700;
  color: #cdcdcd;
}
.textLarge {
  font-size: 1.5rem;
  font-weight: 900;
}
.db-radianite {
  background-color: #5f4484;
  color: white;
  max-height: 65%;
  width: 47%;
  box-shadow: 0px 0px 20px 25px rgba(95, 136, 180, 0.25);
  margin: 6% 3%;
  padding: 2%;
  border-radius: 5%;
}
.rImage-Score {
  height: 65%;
  display: flex;
  flex-direction: row;
}
.radianiteImage {
  width: 40%;
  position: relative;
  top: 7%;
  left: 7%;
}
.rPoints {
  position: relative;
  text-align: center;

  left: 20%;
  top: 11vh;
  height: 18vh;
  width: 28%;
  border-radius: 50%;
  background: rgb(95, 68, 132);
  background: radial-gradient(circle, rgba(95, 68, 132, 0.846673703661152) 0%, rgba(109, 82, 146, 0.22762608461353295) 18%, rgba(132, 103, 167, 0.48252804539784666) 46%, rgba(152, 122, 185, 0.5553571770505077) 70%, rgba(203, 186, 221, 0.7346288857339811) 86%, rgba(255, 255, 255, 1) 100%, rgba(182, 159, 130, 0.15479695296087181) 100%);
}
.rPoints .scoreMain {
  padding-top: 17%;
  font-size: 4rem;
  font-weight: 700;
}
.radianiteHeading {
  position: relative;
  top: 12%;
  text-align: center;
  font-family: 'Iceland';
  padding: 1%;
  font-size: 5rem;
}
/* Teams */
.Teams {
  margin-left: 10%;
  margin-top: 4%;
  height: 50vh;
  color: #fff;
  font-family: 'Iceland';
}
.name-Event {
  margin-top: 2%;
  display: grid;
  grid-template-columns: 40% 50%;
  background-color: rgba(217, 217, 217, 0.3);
  border-radius: 10px;
  display: flex;
  width: 86%;
  height: 50%;
  left: 100px;
  filter: drop-shadow(0px 4px 4px rgba(12, 156, 145, 0.24));
}
.logo-event {
  height: 20%;
  width: 80%;
  border-radius: 10px;
}
.logo-event h2 {
  width: 20%;
  margin: auto;
}
.logo-event img {
  padding: 1rem;
  height: 400%;
  width: 100%;
}
.text-event {
  height: 20%;
  padding: 2rem;
}
.text-event p {
  padding-top: 1rem;
}
/* Add Teams */
.add-Teams {
  margin-left: 10%;
  margin-bottom: 2%;
  color: #fff;
  font-family: 'Iceland';
}
.column {
  float: left;
  width: 25%;
  padding: 0 10px;
}

/* Remove extra left and right margins, due to padding */
.row {
  margin: 0 10%;
}

/* Clear floats after the columns */
.row:after {
  content: '';
  display: table;
  clear: both;
}

/* Responsive columns */
@media screen and (max-width: 600px) {
  .column {
    width: 100%;
    display: block;
    margin-bottom: 20px;
  }
}

/* Style the counter cards */
.card {
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  padding: 16px;
  text-align: center;
  background-color: #f1f1f1;
  margin: 0 1.2rem;
  background: rgba(217, 217, 217, 0.3);
  border-radius: 5px;
  margin-bottom: 3rem;
}
/* Register Btn */
.register-btn {
  background: #5f4484;
  border: none;
  padding: 0.5rem;
  border-radius: 5px;
  color: #fff;
  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.25);
}

@media (max-width: 468px) {
  .dashboard-main {
    width: 100vw;
  }
  .db-main-container {
    flex-direction: column;
    width: 100%;
    padding-left: 0;
  }
  .db-user-details {
    margin: 10% auto;
    padding: 2%;
    width: 80%;
    height: 100%;
  }
  .textLarge {
    font-size: 1.2rem;
    font-weight: 500;
  }
  .qr-and-name {
    height: 25%;
  }
  .userName h1 {
    font-size: 2rem;
  }
  .padding-between {
    padding: 3%;
  }
  .db-radianite {
    margin: 10% auto;
    padding: 2%;
    width: 80%;
  }
  .rImage-Score {
    flex-direction: column;
    margin: 0 auto;
  }
  .radianiteImage {
    left: 27%;
    padding: 10% 0;
  }
  .rPoints {
    top: 0;
    left: 31%;
    width: 35%;
    height: 13vh;
  }

  .rPoints .scoreMain {
    padding-top: 19%;
    font-size: 3rem;
  }
  .radianiteHeading {
    font-size: 3rem;
    padding: 6%;
  }
}
@media screen and (max-width: 300px) {
  .textLarge {
    font-size: 0.8rem;
    font-weight: 500;
  }
  .userName h1 {
    font-size: 1.4rem;
  }
}
@media screen and (max-width: 800px) {
  .textLarge {
    font-size: 1.2rem;
    font-weight: 500;
  }
}

